<resources>
    <string name="app_name">Scrum Do</string>

    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="uHint">Username</string>
    <string name="pHint">Password</string>

    <string name="uploadBtn">Choose Image</string>
    <string name="doneBtn">DONE</string>
    <string name="fnameHint">First Name</string>
    <string name="lnameHint">Last Name</string>
    <string name="cpwdHint">Confirm Password</string>

    <string name="fileName">No image</string>
    <string name="logOut">Log Out</string>

    <string name="projNameHint">Project Name</string>
    <string name="dueDateHint">Due Date</string>

    <string name="toDoLabel">TO DO</string>
    <string name="doingLabel">DOING</string>
    <string name="doneLabel">DONE</string>

    <string name="newTask">Add Task</string>
    <string name="viewMembers">Members</string>
    <string name="myProjects">My Projects</string>
    <string name="deleteProject">Delete Project</string>
    <string name="deleteMember">Delete Members</string>
    <string name="addMember">Add Members</string>

    <string name="assignMember">Assign Member</string>
    <string name="taskName">Task Name</string>
    <string name="taskDetail">Description: </string>
    <string name="assignedMember">Assigned To: </string>
    <string name="dueDate">Due Date: </string>

    <string name="viewAllComments">View Comments</string>
    <string name="sendComment">Send</string>
    <string name="commentHere">Comment</string>
    <string name="deleteTask">Delete Task</string>

    <string name="back">Back</string>
    <string name="linkHint">Link</string>

</resources>
