<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/taskName"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskDetail"
        android:gravity="center_horizontal"
        android:hint="@string/taskDetail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dueDateHint"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskDueDate"
        android:calendarViewShown="false"
        android:gravity="center_horizontal"
        android:datePickerMode="spinner"
        android:foregroundGravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignMember"
        android:id="@+id/assignMember"
        android:layout_gravity="center_horizontal"
        android:onClick="addAssignedUser"
        android:background="#f7c0c0"
        android:layout_margin="10dp"
        android:textColor="#921616" />
</LinearLayout>
